--- a/examples/rails/package.json
+++ b/examples/rails/package.json
@@ -2,6 +2,7 @@
   "name": "blog",
   "private": true,
   "license": "MIT",
+  "type": "module",
   "dependencies": {
     "@bugsnag/js": "^7.9.2",
     "@bugsnag/plugin-react": "^7.9.2",
@@ -17,18 +18,16 @@
   "version": "0.1.0",
   "devDependencies": {
     "@vitejs/plugin-legacy": "^1.6.2",
-    "@vitejs/plugin-react": "^1.0.1",
+    "@vitejs/plugin-react": "^1.1.4",
     "less": "^4.1.1",
     "ms": "^2.1.3",
-    "postcss": "^8.2",
-    "postcss-import": "^14.0",
     "sass": "^1.32.8",
     "stylus": "^0.54.8",
     "vite": "^2.7.7",
-    "vite-plugin-bugsnag": "^1.0.2",
-    "vite-plugin-environment": "^1.0.0",
-    "vite-plugin-full-reload": "^0.2",
+    "vite-plugin-bugsnag": "^2.0",
+    "vite-plugin-environment": "^1.1",
+    "vite-plugin-full-reload": "^1.0",
     "vite-plugin-ruby": "^3.0.5",
-    "vite-plugin-windicss": "^0.9"
+    "vite-plugin-windicss": "^1.6"
   }
 }
